ci: test plone docker action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,8 @@ jobs:
         with:
           composeFile: docker-compose.yml
           serviceName: plone
+          build: true
+          push: "on:push"
 
       - name: Test
         run: npm run test --ci --coverage --maxWorkers=2
