ci: create plone site in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: plone/plone-backend:6.0.0a3
     environment:
       - ADDONS=plone.volto==4.0.0a3
+      - SITE=Plone
+      - DELETE_EXISTING=1
     platform: "linux/amd64"
     ports:
       - "8080:8080"
