--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build; is-ci || husky install",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "release": "release-it"
   },
   "peerDependencies": {},
   "husky": {
