--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
       "commitMessage": "chore: release v${version}"
     },
     "npm": {
-      "publish": true
+      "publish": true,
+      "skipChecks": true
     },
     "github": {
       "release": true,
@@ -98,6 +99,9 @@
         }
       }
     }
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@commitlint/cli": "17.0.3",
